--- a/views/credits.ejs
+++ b/views/credits.ejs
@@ -21,11 +21,11 @@
 			<div id="lunaBGLogo">
 			</div>
 			<span id="lunaCreditsBlurb">
-				Hi! Thanks for using Luna! If you have any suggestions or questions, feel free to contact me at berry@berrypunch.net. Luna is available for free + full source code over at Github. It is licensed under the MIT license. In case you decide to alter Luna, attribution is not required but very much appreciated!
+				Hi! Thanks for using Luna! If you have any suggestions or questions, feel free to contact me at berry@berrypunch.net. Luna is available for free + full source code over at <a href="https://github.com/Lerke/luna">Github</a>. It is licensed under the MIT license. In case you decide to alter Luna, attribution is not required but very much appreciated!
 			  Below you will find a full list of credits.
 				<hr>
 
-				Luna &copy 2014 - <a href="http://berrypunch.net">Lerke</a><br>
+				Luna &copy 2014 - <a href="http://berrypunch.net">Lerke</a> - <a href="https://github.com/Lerke/luna">Lerke@Github</a><br>
 				Cutie Mark - Luna(S1) - <a href="http://greywander87.deviantart.com/art/Cutie-Mark-Luna-S1-330698902">Greywander87</a><br>
 				Cutie Mark - Luna - <a href="http://ooklah.deviantart.com/art/Cutie-Mark-Luna-210602619">ooklah</a><br>
 				Batch icons by <a href="http://adamwhitcroft.com/batch/">Adam Whitcroft</a><br>
