--- a/views/credits.ejs
+++ b/views/credits.ejs
@@ -52,7 +52,7 @@
 				OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 				SOFTWARE.
 			</span>
-			<span id="version">VERSION 1.0.0</span>
+			<span id="version">VERSION <%= VERSION %></span>
 		</div>
 	</div>
 </body>
