Added persisting volume.

--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -21,6 +21,7 @@
 	<script src="//vjs.zencdn.net/4.5.1/video.js"></script>
 	<link href="//vjs.zencdn.net/4.5.1/video-js.css" rel="stylesheet">
 	<script src="/js/vjs.youtube.js"></script>
+	<script src="/js/videojs.persistvolume.js"></script>
 
 	<!-- LUNA sources. -->
 	<script src="/js/client.js"></script>
