--- a/public/css/lunastyle.css
+++ b/public/css/lunastyle.css
@@ -28,6 +28,7 @@ body {
 	margin-top: 0;
 	overflow: hidden;
 	bottom:0;
+	z-index: 100;
 }
 
 #lunaContent {
@@ -37,6 +38,7 @@ body {
 	bottom: 0;
 	right: 0;
 	height: 100%;
+	z-index: 99;
 }
 
 
