--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -16,6 +16,7 @@
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+	
 
 	<!-- Note: LUNA includes these libraries, incase the original server goes down! -->
 	<script src="//vjs.zencdn.net/4.5.1/video.js"></script>
@@ -33,7 +34,7 @@
 </head>
 <body>
 	<div id="pageContainer">
-		<div id="lunaSidebar">
+		<div id="lunaSidebar" class="ui-widget-content'">
 			<span id="lunaText">LUNA</span>
 			<div id="lunaLogo">
 			</div>
