--- a/public/css/lunaStream.css
+++ b/public/css/lunaStream.css
@@ -3,7 +3,8 @@
 	display: block;
 	width: 640px;
 	height: 480px;
-	position: relative;
+	position: absolute;
+	z-index: 5;
 	left: -94px;
 	right: 0;
 	margin: 0 auto;
@@ -225,3 +226,4 @@
 	background-repeat: no-repeat;
 	background-position: center;
 }
+
