--- a/public/css/lunastyle.css
+++ b/public/css/lunastyle.css
@@ -124,9 +124,11 @@ body {
 	position: absolute;
 	height: 368px;
 	width: 368px;
-	left: 0;
-	top:250px;
+	left: -94px;
+	top:25%;
+	margin-top: 50px;
 	right: 0;
+	margin-bottom: auto;
 	margin-left: auto;
 	margin-right: auto;
 	background-image: url(../img/lunahalfmoon.png);
