Disabled chrome warning for now

--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -65,7 +65,7 @@
 	</div>
 </body>
 <div id="dialog-modal" title="Chrome warning" style="display: none"><p>Luna and Chrome do not play well together at the moment. The Shuffle functionality will be disabled (Administrators only).</p></div>
-<script> //Check Chrome!
+<!--<script> //Check Chrome!
 var isChrome = !!window.chrome;
 if(isChrome) {
 	$("#shuffleBox").attr('disabled', true);
@@ -79,5 +79,5 @@ if(isChrome) {
 		$("#shuffleBox").attr('disabled', false);
 
 }
-</script>
+</script>-->
 </html>
