Fixed some crashing issues.

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -37,6 +37,7 @@
 				Luna lets you create synchronized video streams without needing an account. Create a stream right away!
 			</span>
 			<div id="createStream">CREATE STREAM</div>
+						<div id="sorry">Hi folks! Due to LunaSync's EOL, Luna has suddenly gotten a lot more traffic. This unfortunately has brought some few bugs to light I never anticipated! I will be ironing these out as soon as I can!</div>
 		</div>
 
 		<div id="createStreamPage">
@@ -54,5 +55,6 @@
 		</div>
 
 	</div>
+
 </body>
 </html>
