--- a/public/css/lunastyle.css
+++ b/public/css/lunastyle.css
@@ -140,3 +140,13 @@ body {
 	height: 300px;
 }
 
+#sorry {
+	position: absolute;
+	height: 50px;
+	bottom: 100px;
+	width: 100%;
+	color: #bccdd8;
+	font-size: 1.3em;
+	background-color: rgba(255,255,255,0.3);
+	text-align: center;
+}
