--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -37,7 +37,7 @@
 				Luna lets you create synchronized video streams without needing an account. Create a stream right away!
 			</span>
 			<div id="createStream">CREATE STREAM</div>
-						<div id="sorry">Hi folks! Due to LunaSync's EOL, Luna has suddenly gotten a lot more traffic. This unfortunately has brought some few bugs to light I never anticipated! I will be ironing these out as soon as I can!</div>
+						<div id="sorry">Hi everyone! I fixed most critical bugs and added a basic chat system (Will be improved upon in the future!). If you have any problems with Luna or would like to send me a message, contact me at lerke[at]berrypunch.net!</div>
 		</div>
 
 		<div id="createStreamPage">
