--- a/public/css/lunaStream.css
+++ b/public/css/lunaStream.css
@@ -1,15 +1,18 @@
 
 
 #playlistSelect {
-	width: 95%;
+	width: 100% !important;
 	height: 25%;
-	left: 0;
-	right: 0;
 	position: relative;
 	margin: 0 auto;
+	left: 0;
+	right: 0;
 	border: none;
 	background: none;
 	color: white;
+	padding:0;
+	border-bottom: 1px dotted rgba(255, 255, 255, 0.3);
+	border-top: 1px dotted rgba(255, 255, 255, 0.3);
 }
 
 #addVideoBox {
@@ -25,7 +28,28 @@
 	color: white;
 }
 
-#addVideoBox input {
+#playOnEnter {
+	margin-top: 5px;
+	margin-bottom: 10px;
+}
+
+#lunaSideBarContent {
+	width: 100%;
+}
+
+#oneTimeVideo {
+	width: 95%;
+	height: 35%;
+	left: 0;
+	right: 0;
+	position: relative;
+	margin: 0 auto;
+	border: none;
+	background: none;
+	color: white;
+}
+
+#oneTimeVideo input {
 	background-color: transparent;
 	border: 1px solid rgba(188,205,216,0.5);
 	width:100%;
@@ -34,6 +58,47 @@
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 	transition: box-shadow .5s;
+}
+
+#oneTimeVideo input:hover {
+	outline: none;
+	border-color: rgba(188,205,216,0.5);
+	box-shadow: 0 0 10px #ecf1f4;
+}
+
+#addVideoBox input {
+	table-layout: fixed;
+	background-color: transparent;
+	border: 1px solid rgba(188,205,216,0.5);
+	width:100%;
+	color: #bccdd8;
+	border-radius: 10px;
+	text-align: center;
+	font-family: 'Open Sans', sans-serif;
+	transition: box-shadow .5s;
+}
+
+#videoInputTimeBeginDiv{
+	float:left;
+	width: 48%;
+}
+#videoInputTimeEndDiv {
+	width: 48%;
+	float: right;
+}
+
+#timeparentdiv {
+	width: 100%;
+}
+
+.glowbox {
+	transition: box-shadow .5s;
+}
+
+.glowbox:hover {
+		outline: none;
+	border-color: rgba(188,205,216,0.5);
+	box-shadow: 0 0 10px #ecf1f4;
 }
 
 #addVideoBox input:hover {
@@ -222,29 +287,31 @@
 	height: 480px;
 	position: absolute;
 	z-index: 5;
-	left: -94px;
+	left: -215px;
 	right: 0;
 	margin: 0 auto;
 	top: 25%;
 	-moz-box-shadow: 0 0 80px rgba(236,241,244,0.4);
 	-webkit-box-shadow: 0 0 80px rgba(236,241,244,0.4);
 	box-shadow: 0 0 80px rgba(236,241,244,0.4);
-	transition: left .2s;
 }
 
 #chatBox {
 	width: 265px;
 	background-color: #6265b9;
-	position: absolute;
+	position: absolute !important;
 	-webkit-box-shadow: inset 0px 0px 16px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: inset 0px 0px 16px 0px rgba(0,0,0,0.75);
 	box-shadow: inset 0px 0px 16px 0px rgba(0,0,0,0.75);
-	right:0;
-	top:0;
-	min-height: 100%;
+	right: 0 !important;
+	left: auto !important;
+	top: 0;
+	min-height: 654px;
+	float: right;
 	margin-top: 0;
 	overflow: hidden;
 	bottom:0;
+	height: 100%;
 	z-index: 100;
 }
 
@@ -274,10 +341,15 @@
 	margin: 0 auto;
 }
 
-#chatContentBox {
-	position: absolute;
+
+#chatparent {
 	height: 75%;
 	width: 90%;
+	margin: 0 auto;
+}
+#chatContentBox {
+	height: 100%;
+	width: 100%;
 	background-color: rgba(255,255,255,0.15);
 	border: 1px solid rgba(0,0,0,0.5);
 	margin: 0 auto;
@@ -289,11 +361,15 @@
 	height: 30px;
 	bottom: 0;
 	width: 100%;
+	border-left: 1px solid rgba(0,0,0,0.5);
+	border-right: 1px solid rgba(0,0,0,0.5);
+	border-bottom: 1px solid rgba(0,0,0,0.5);
 	color: #bccdd8;
 	background-color: #595B96;
-		font-family: 'Alegreya Sans SC', sans-serif;
+	font-family: 'Alegreya Sans SC', sans-serif;
 	font-weight: 300;
-		text-transform: uppercase;
+	text-transform: uppercase;
+	margin: 0 auto;
 }
 
 #chatTextInputBox {
@@ -301,6 +377,10 @@
 	height: 30px;
 	bottom: 0;
 	width: 100%;
+	border-left: 1px solid rgba(0,0,0,0.5);
+	border-right: 1px solid rgba(0,0,0,0.5);
+	border-bottom: 1px solid rgba(0,0,0,0.5);
+	margin: 0 auto;
 	color: #bccdd8;
 	background-color: #595B96;
 	font-family: 'Alegreya Sans SC', sans-serif;
@@ -328,4 +408,18 @@
 	overflow-x: auto;
 	color: #D1EDFF;
 	font-family: sans-serif;
+}
+
+.adminMessage {
+	color: #FF7373;
+	font-family: sans-serif;
+}
+
+.systemMessage {
+	color: #73FFB9;
+	font-family: sans-serif;
+}
+
+#lunaBGLogo {
+	left: -215px;
 }
