--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -37,7 +37,7 @@
 				Luna lets you create synchronized video streams without needing an account. Create a stream right away!
 			</span>
 			<div id="createStream">CREATE STREAM</div>
-						<div id="sorry">Hi all, I've added a lot of features to Luna (I hope you like them!). As always, when I discover bugs (most likely!), I'll solve them as soon as possible! If ou want to send me bug reports or just contact me, send me an email at berry[at]berrypunch.net</div>
+						<div id="sorry">Hi all, I've updated Luna to work with Youtube's v3 API! If you want to send me bug reports or just contact me, send me an email at berry[at]berrypunch.net</div>
 		</div>
 
 		<div id="createStreamPage">
