--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -79,7 +79,7 @@
 				<span id="controlspan">Misc. Options</span><hr>
 				<div class="alignBox">
 					<table class="AlignList">
-						<tr><td><input type="checkbox" id="fullScreen" name="fScreen" unchecked class="glowbox" title="Check to fullscreen videos."></td><td><label for="fullScreen" title="Check to fullscreen videos.">Fullscreen Video</label></td></input></tr>
+						<tr><td><input type="checkbox" id="fullScreen" name="fScreen" checked class="glowbox" title="Check to fullscreen videos."></td><td><label for="fullScreen" title="Check to fullscreen videos.">Fullscreen Video</label></td></input></tr>
 						<tr><td><input type="checkbox" id="lockSidebar" name="lockBar" checked class="glowbox" title="Check to lock this left sidepanel."></td><td><label for="lockSidebar" title="Check to lock this left sidepanel.">Lock Sidebar</label></td></input></tr>
 						<tr><td><input type="checkbox" id="lockChatBar" name="lockChatBar" checked class="glowbox" title="Check to show the right chatpanel."></td><td><label for="lockChatBar" title="Check to show the right chatpanel.">Show Chat</label></td></input></tr>
 						<tr><td><input type="checkbox" id="showToolTips" name="toolTips" unchecked class="glowbox" title="Check to show these popup tooltips."></td><td><label for="showToolTips" title="Check to show these popup tooltips." id="showToolTipsLabel">Show Tooltips</label></td></input></tr>
