--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -41,6 +41,7 @@
 				<select multiple id="playlistSelect">
 				</select>
 				<div id="controlDiv">
+				<input type="text" id="filterInput" placeholder="Search playlist" title="Search the playlist"/>
 					<div id="controllerOptions">
 						<span id="controlspan">Control Panel</span><hr>
 						<input type="checkbox" name="shuffle" id="shuffleBox" class="glowbox" title="Check if you want the next/previous video to be a random video."><label for="shuffleBox" title="Check if you want the next/previous video to be a random video.">Shuffle</label><br>
