--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script> var rm = "<%= roomName %>";</script>
+	<script> var rm = "<%= roomName %>";
+			 var portnum = "<%= portNum %>"
+	</script>
 	<title>Luna</title>
 
 	<link rel="stylesheet" href="/css/lunastyle.css">
@@ -23,7 +25,7 @@
 
 	<!-- LUNA sources. -->
 	<script src="/js/client.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
+	<script src="https://cdn.socket.io/socket.io-1.3.6.js"></script>
 	<script src="/js/jquery.fittext.js"></script>
 	<script src="/js/generalPageRender.js"></script>
 	<!-- End LUNA sources. -->
