--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -37,7 +37,7 @@
 				Luna lets you create synchronized video streams without needing an account. Create a stream right away!
 			</span>
 			<div id="createStream">CREATE STREAM</div>
-						<div id="sorry">Hi all, I've updated Luna to work with Youtube's v3 API! If you want to send me bug reports or just contact me, send me an email at berry[at]berrypunch.net</div>
+						<div id="sorry">Luna now (finally) supports the YouTube HTML5 player. I've also updated a bunch of dependencies. If something breaks, <a href="https://github.com/Lerke/luna/issues" target="_blank">let me know on Github!</a></div>
 		</div>
 
 		<div id="createStreamPage">
