Client API update

--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -3,6 +3,7 @@
 <head>
 	<script> var rm = "<%= roomName %>";
 			 var portnum = "<%= portNum %>"
+			 var clientkey = "<%= clientkey %>"
 	</script>
 	<title>Luna</title>
 
